fixed payment on small screens and deleted bricks

--- a/src/app/_components/payment/payment.component.scss
+++ b/src/app/_components/payment/payment.component.scss
@@ -68,7 +68,7 @@ body {
 label {
   height: 35px;
   position: relative;
-  color: #8798AB;
+  color: #464c53;
   display: block;
   margin-top: 30px;
   margin-bottom: 20px;
@@ -82,7 +82,7 @@ label > span {
   height: 100%;
   font-weight: 300;
   line-height: 32px;
-  color: #8798AB;
+  color: #546E7A;
   border-bottom: 1px solid #586A82;
   transition: border-bottom-color 200ms ease-in-out;
   cursor: text;
@@ -130,7 +130,6 @@ label .field.is-focused + span {
   background: transparent;
   font-weight: 300;
   border: 0;
-  color: white;
   outline: none;
   cursor: text;
   display: block;
@@ -144,11 +143,13 @@ label .field.is-focused + span {
 .field::-moz-placeholder { color: #8898AA; }
 
 /* IE doesn't show placeholders when empty+focused */
- .field:-ms-input-placeholder { color: #424770; }
+ .field:-ms-input-placeholder { color: #704242; }
 
 .field.is-empty:not(.is-focused) {
   opacity: 0;
 }
+
+
 
 // button {
 //   float: left;
